Add GitHub Actions CI/CD workflow and complete rebranding
- Add automated Docker image builds via GitHub Actions
  - Build and push 'master' tag on commits to master branch
  - Build and push version tags + 'latest' on GitHub releases
  - Multi-architecture support (amd64, arm64)
  - Publish to GitHub Container Registry (ghcr.io)

- Update README with deployment documentation
  - Add pre-built image usage instructions
  - Document CI/CD workflow and release process
  - Update docker-compose examples with GHCR images

- Complete package renaming
  - Update package.json name and description
  - Update package-lock.json references

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "homelab-user-dashboard",
+  "name": "application-directory",
   "version": "1.0.0",
-  "description": "Keycloak-authenticated dashboard for homelab applications",
+  "description": "Keycloak-authenticated application directory",
   "private": true,
   "workspaces": [
     "backend",
