--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --ext ts,tsx"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
